--- a/src/scss/_posts.scss
+++ b/src/scss/_posts.scss
@@ -54,6 +54,7 @@ body.page:not(.historiador-front-page) .entry-title {
 }
 
 .entry-header .entry-title {
+	margin-top: $space-0;
 	margin-bottom: $vertical-rhythm-1;
 }
 
